Use Pyramid's implicit tween ordering
This seems more normal and appropriate for a Pyramid extension than the
unusual way that we were adding tweens before (copy-pasted from
Warehouse).

I've tested this in h. If you add `pyramid_sanity` to the **bottom** of
`app.py` (after all other tweens have already been added) then
`pyramid_sanity`'s tweens get added in the desired order:

    diff --git a/h/app.py b/h/app.py
    index efc155947..8648aa9b6 100644
    --- a/h/app.py
    +++ b/h/app.py
    @@ -154,3 +154,4 @@ def includeme(config):
        )

        config.include("h_pyramid_sentry")
    +    config.include("pyramid_sanity")

You can test the order by running `ptweens`:

    $ tox -qqe dev --run-command 'ptweens conf/development-app.ini'
    "pyramid.tweens" config value NOT set (implicitly ordered tweens used)

    Implicit Tween Chain

    Position    Name
    --------    ----
    -           INGRESS
    0           h.tweens.unicode_crashing_tween_factory
    1           pyramid_sanity.IngressTweenFactory
    2           h.tweens.cache_header_tween_factory
    3           h.tweens.security_header_tween_factory
    4           h.tweens.invalid_path_tween_factory
    5           h.tweens.redirect_tween_factory
    6           pyramid_tm.tm_tween_factory
    7           pyramid.tweens.excview_tween_factory
    8           h.tweens.rollback_db_session_on_exception_factory
    9           h.tweens.conditional_http_tween_factory
    10          pyramid_exclog.exclog_tween_factory
    11          pyramid_sanity.EgressTweenFactory
    -           MAIN

Due to the "best effort" nature of Pyramid's implicit tween ordering it
is possible to break it by registering another tween **after** including
`pyramid_sanity`. For example this change to h would add a tween that
breaks `pyramid_sanity`:

    diff --git a/h/app.py b/h/app.py
    index efc155947..f963b8c92 100644
    --- a/h/app.py
    +++ b/h/app.py
    @@ -154,3 +154,5 @@ def includeme(config):
        )

        con

--- a/.pylintrc
+++ b/.pylintrc
@@ -12,6 +12,7 @@ load-plugins=pylint.extensions.bad_builtin,
 
 [MESSAGES CONTROL]
 disable=bad-continuation,
+        missing-docstring,
         missing-type-doc,
         missing-return-type-doc,
 
