Update the python classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,9 @@ url = https://web.hypothes.is/
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 project_urls=
     Source=https://github.com/hypothesis/pyramid-sanity
