Apply the new pypackage cookiecutter
Apply the [new pypackage cookiecutter](https://github.com/hypothesis/cookiecutters/tree/main/pypackage)
to this project.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,32 +1,42 @@
-# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 [metadata]
-name = pyramid_sanity
-version = 1.0
-description = Sensible defaults to catch bad behavior
+name = pyramid-sanity
+description = Sensible defaults to catch bad behavior.
 long_description = file: README.md
 long_description_content_type = text/markdown
-
-author = Hypothesis Engineering Team
-author_email = eng@list.hypothes.is
-maintainer = Hypothesis Engineering Team
-maintainer_email = eng@list.hypothes.is
-url = https://web.hypothes.is/
-
-# From: https://pypi.org/pypi?:action=list_classifiers
+url = https://github.com/hypothesis/pyramid-sanity
+project_urls =
+    Bug Tracker = https://github.com/hypothesis/pyramid-sanity/issues
+    Changelog = https://github.com/hypothesis/pyramid-sanity/releases
 classifiers =
-    Development Status :: 2 - Pre-Alpha
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-
-project_urls=
-    Source=https://github.com/hypothesis/pyramid-sanity
-license=License :: OSI Approved :: BSD License
-platforms=Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: BSD License
+    Intended Audience :: Developers
 
 [options]
+package_dir =
+    = src
+packages = find:
+python_requires = >=3.8
 install_requires =
     pyramid
-tests_require=
-    pytest
-    coverage
-    webtest
+
+[options.packages.find]
+where = src
+
+[options.entry_points]
+
+[pycodestyle]
+ignore =
+    # Disable pycodestyle errors and warnings that we don't care about because
+    # Black formats our code for us.
+    E203,  # Whitespace before ':',
+    E231,  # Missing whitespace after ',',
+    E501,  # Line too long,
+    W503,  # Line break before binary operator,
+
+    # "Comparison to None should be 'if cond is None:'.
+    # PyLint finds these so we don't need pycodestyle to.
+    E711,
+
+    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
+    E722,
